// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabelCheckboxError CheckBox throw error with message 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  color: #120D2E;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-bottom: 0.375rem;
}

.emotion-2 {
  margin: 0rem 0.625rem 0rem 0rem;
}

.emotion-3 {
  color: #120D2E;
  font-size: 0.813rem;
}

.emotion-4 {
  border: 0;
  clip: rect(0 0 0 0);
  clippath: inset(50%);
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
}

.emotion-5 {
  width: 16px;
  height: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #FFFFFF;
  border-radius: 0.25rem;
  border: 0.063rem solid #F55858;
}

.emotion-6 {
  color: #F55858;
  font-size: 0.625rem;
  font-weight: 600;
}

<div>
  <div
    class="emotion-0"
    data-testid="LabelCheckboxContainer"
  >
    <label
      class="emotion-1"
      data-testid="checkboxContainer"
    >
      <div
        class="emotion-2"
        data-testid="labelContainer"
      >
        <label
          class="emotion-3"
        >
          testLabel
        </label>
      </div>
      <input
        class="emotion-4"
        data-testid="hiddenCheckbox"
        type="checkbox"
      />
      <div
        class="emotion-5"
        data-testid="styledCheckbox"
      />
    </label>
    <label
      class="emotion-6"
      data-testid="errorMessage"
    >
      errorMessage
    </label>
  </div>
</div>
`;

exports[`LabelCheckboxError CheckBox throw error without message 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  color: #120D2E;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-bottom: 0.375rem;
}

.emotion-2 {
  margin: 0rem 0.625rem 0rem 0rem;
}

.emotion-3 {
  color: #120D2E;
  font-size: 0.813rem;
}

.emotion-4 {
  border: 0;
  clip: rect(0 0 0 0);
  clippath: inset(50%);
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
}

.emotion-5 {
  width: 16px;
  height: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #FFFFFF;
  border-radius: 0.25rem;
  border: 0.063rem solid #F55858;
}

<div>
  <div
    class="emotion-0"
    data-testid="LabelCheckboxContainer"
  >
    <label
      class="emotion-1"
      data-testid="checkboxContainer"
    >
      <div
        class="emotion-2"
        data-testid="labelContainer"
      >
        <label
          class="emotion-3"
        >
          testLabel
        </label>
      </div>
      <input
        class="emotion-4"
        data-testid="hiddenCheckbox"
        type="checkbox"
      />
      <div
        class="emotion-5"
        data-testid="styledCheckbox"
      />
    </label>
  </div>
</div>
`;
